BLD: add a hyphen to the development version number

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,7 +41,7 @@ PROJECT(vfgen CXX)
 #
 SET(VFGEN_VERSION_MAJOR "2")
 SET(VFGEN_VERSION_MINOR "5")
-SET(VFGEN_VERSION_PATCH "0dev")
+SET(VFGEN_VERSION_PATCH "0-dev")
 SET(VFGEN_VERSION ${VFGEN_VERSION_MAJOR}.${VFGEN_VERSION_MINOR}.${VFGEN_VERSION_PATCH})
 ADD_DEFINITIONS(-DVERSION="\\\"${VFGEN_VERSION}\\\"")
 IF(CMAKE_COMPILER_IS_GNUCXX)
