--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -43,7 +43,7 @@ SET(VFGEN_VERSION_MAJOR "2")
 SET(VFGEN_VERSION_MINOR "5")
 SET(VFGEN_VERSION_PATCH "0-dev")
 SET(VFGEN_VERSION ${VFGEN_VERSION_MAJOR}.${VFGEN_VERSION_MINOR}.${VFGEN_VERSION_PATCH})
-ADD_DEFINITIONS(-DVERSION="\\\"${VFGEN_VERSION}\\\"")
+ADD_DEFINITIONS(-DVERSION="${VFGEN_VERSION}")
 IF(CMAKE_COMPILER_IS_GNUCXX)
     ADD_DEFINITIONS(-Wall)
 ENDIF(CMAKE_COMPILER_IS_GNUCXX)
