MAINT: Put vfgen version in a file by itself, so only one file needs to be update when it changes.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,10 +39,11 @@ PROJECT(vfgen CXX)
 # Then set up a definition of the macro VERSION that will be available
 # in the source code.
 #
-SET(VFGEN_VERSION_MAJOR "2")
-SET(VFGEN_VERSION_MINOR "5")
-SET(VFGEN_VERSION_PATCH "0-dev")
-SET(VFGEN_VERSION ${VFGEN_VERSION_MAJOR}.${VFGEN_VERSION_MINOR}.${VFGEN_VERSION_PATCH})
+#SET(VFGEN_VERSION_MAJOR "2")
+#SET(VFGEN_VERSION_MINOR "5")
+#SET(VFGEN_VERSION_PATCH "0-dev")
+#SET(VFGEN_VERSION ${VFGEN_VERSION_MAJOR}.${VFGEN_VERSION_MINOR}.${VFGEN_VERSION_PATCH})
+FILE(STRINGS "../version.txt" VFGEN_VERSION)
 ADD_DEFINITIONS(-DVERSION="${VFGEN_VERSION}")
 IF(CMAKE_COMPILER_IS_GNUCXX)
     ADD_DEFINITIONS(-Wall)
@@ -84,10 +85,10 @@ SET(CMAKE_INSTALL_PREFIX $ENV{CMAKE_INSTALL_PREFIX})
 INSTALL(TARGETS vfgen RUNTIME DESTINATION bin)
 
 
-SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "VFGEN is a vector field source code generator.")
-SET(CPACK_PACKAGE_VENDOR "Warren Weckesser")
-SET(CPACK_PACKAGE_VERSION_MAJOR ${VFGEN_VERSION_MAJOR})
-SET(CPACK_PACKAGE_VERSION_MINOR ${VFGEN_VERSION_MINOR})
-SET(CPACK_PACKAGE_VERSION_PATCH ${VFGEN_VERSION_PATCH})
-SET(CPACK_SOURCE_GENERATOR "TGZ")
-INCLUDE(CPack)
+#SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "VFGEN is a vector field source code generator.")
+#SET(CPACK_PACKAGE_VENDOR "Warren Weckesser")
+#SET(CPACK_PACKAGE_VERSION_MAJOR ${VFGEN_VERSION_MAJOR})
+#SET(CPACK_PACKAGE_VERSION_MINOR ${VFGEN_VERSION_MINOR})
+#SET(CPACK_PACKAGE_VERSION_PATCH ${VFGEN_VERSION_PATCH})
+#SET(CPACK_SOURCE_GENERATOR "TGZ")
+#INCLUDE(CPack)
