CI: run a command at the end of the build that should exit with 0.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ build:
     - cd cmake_build
     - cmake ../src
     - make
-    - ./vfgen help
+    - ./vfgen help help
   #
   #artifacts:
   #  paths:
