--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,16 +11,12 @@ test:
     - cmake ../src
     - make
     - make install
-    - cd ..
-    - echo "Installing octave"
-    - apt-get -y install octave
+    - cd ../tests
     - echo "Testing help"
     - vfgen help help
-    - cd tests
     - echo "Testing octave"
     - cd test_octave
-    - vfgen octave ../vf/linearosc.vf
-    - octave --no-gui --no-window-system test_octave.m
+    - bash run_test.sh
     - cd ..
     - echo "Testing lsoda"
     - cd test_lsoda
