--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,7 @@ test:
     - cd ..
     - echo "Testing boostodeint"
     - cd test_boostodeint
+    - apt-get -y install libboost-math-dev
     - bash run_test_boostodeint_default_noparams.sh
     - bash run_test_boostodeint_default_params.sh
     - cd ..
