ENH: Add version option for the dde_solver command.
In 2017, I created a modified version of dde_solver_m.f90 that
fixed some issues with function interfaces.  The new code now uses
assumed-shape arrays consistently.  This commit adds an option to
the dde_solver command that allows the user to select which version
of dde_solver to generate code for, the old version (version 1) or
the new version (version 2).

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,10 @@ test:
     - cd test_octave
     - bash run_test.sh
     - cd ..
+    - echo "Testing dde_solver"
+    - cd test_dde_solver
+    - bash run_test.sh
+    - cd ..
     - echo "Testing lsoda"
     - cd test_lsoda
     - bash run_test.sh
