--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 # use the official gcc image, based on debian
 # can use versions as well, like gcc:5.2
 # see https://hub.docker.com/_/gcc/
-image: gcc
+image: gcc:8.3
 
 test:
   script:
