TEST: Add unit test for scilab.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ image: gcc:8.3
 
 test:
   script:
+    - lsb_release -irc
     - echo "Installing vfgen"
     - apt-get -y update && apt-get -y install cmake libmxml-dev libginac-dev
     - cd cmake_build
@@ -37,6 +38,10 @@ test:
     - bash run_test_boostodeint_default_params.sh
     - bash run_test_boostodeint_implicit_noparams.sh
     - bash run_test_boostodeint_implicit_params.sh
+    - cd ..
+    - echo "Testing scilab"
+    - cd test_scilab
+    - bash run_test.sh
     - cd ..
 
   #
