--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,10 @@ image: gcc:8.3
 
 test:
   script:
+    - apt-get -y update && apt-get -y install lsb_release
     - lsb_release -irc
     - echo "Installing vfgen"
-    - apt-get -y update && apt-get -y install cmake libmxml-dev libginac-dev
+    - apt-get -y install cmake libmxml-dev libginac-dev
     - cd cmake_build
     - cmake ../src
     - make
