--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,10 @@ test:
     - cd test_gsl
     - bash run_test.sh
     - cd ..
+    - echo "Testing evf"
+    - cd test_evf
+    - bash run_test.sh
+    - cd ..
     - echo "Testing boostodeint"
     - cd test_boostodeint
     - apt-get -y install libboost-math-dev
