MAINT: A couple updates:
* Add -std=c++11 to compiler commands.
* Fix Makefile.vfgen and Makefile.am:
  * Remove vf_help_text.o or vf_help_text.cpp, add vf_help_text.h where needed.
  * Add vf_boostodeint.o or vf_boostodeint.cpp.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -47,6 +47,8 @@ project(vfgen CXX)
 file(STRINGS "../version.txt" VFGEN_VERSION)
 add_definitions(-DVERSION="${VFGEN_VERSION}")
 
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
 if(CMAKE_COMPILER_IS_GNUCXX)
     add_definitions(-Wall)
 endif(CMAKE_COMPILER_IS_GNUCXX)
