Update .gitlab-ci.yml to use the new LSODA test scripts.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,9 @@ test:
     - cd ..
     - echo "Testing lsoda"
     - cd test_lsoda
-    - bash run_test.sh
+    - bash download_lsoda.sh
+    - bash run_test_linearosc.sh
+    - bash run_test_pidecay.sh
     - cd ..
     - echo "Testing gsl"
     - cd test_gsl
