--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,6 +9,9 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
+    - uses: r-lib/actions/setup-r@v1
+    - name: Install deSolve for R
+      run: Rscript -e 'install.packages("deSolve")'
     - name: make and run
       run: |
         sudo apt-get -y update && sudo apt-get -y install lsb-release
