Update Makefile.am to include javamath, plus a couple other small tweaks.

--- a/configure.ac
+++ b/configure.ac
@@ -1,11 +1,11 @@
-#  configure.ac   for VFGEN (www.warren.weckesser.net/vfgen)
-#  Copyright (c) 2008 Warren Weckesser
+#  configure.ac   for VFGEN (https://github.com/WarrenWeckesser/vfgen)
+#  Copyright (c) 2008-2022 Warren Weckesser
 #
 #  Process this file with autoconf to produce a configure script.
 #
 
 AC_PREREQ(2.59)
-AC_INIT([vfgen], m4_esyscmd_s(cat version.txt), [vfgen DOT help AT gmail])
+AC_INIT([vfgen], m4_esyscmd_s(cat version.txt), [warren DOT weckesser AT gmail])
 
 AC_MSG_NOTICE([[
 ------------------------------------
