--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,13 +4,11 @@ on: [push, pull_request]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    
     steps:
     - uses: actions/checkout@v4
     - uses: r-lib/actions/setup-r@v2
-    - name: make and run
+    - name: install
       run: |
         sudo apt-get -y update && sudo apt-get -y install lsb-release
         lsb_release -irc
@@ -20,5 +18,29 @@ jobs:
         cmake ../src
         make
         make install
-        cd ../tests
-        sudo bash run_ci_tests.sh
+        cd ..
+        # sudo bash run_ci_tests.sh
+    - name: test_help
+      run: |
+        vfgen help help
+    - name: test_scilab
+      if: "contains(github.event.head_commit.message, '[test all]') || contains(github.event.head_commit.message, '[test scilab]')"
+      run: |
+        cd tests/test_scilab
+        sudo bash test_scilab.sh
+        cd ..
+    - name: test_evf
+      if: "contains(github.event.head_commit.message, '[test all]') || contains(github.event.head_commit.message, '[test evf]')"
+      run: |
+        cd tests/evf
+        sudo bash run_test.sh
+        cd ../..
+    - name: test_boostodeint
+      if: "contains(github.event.head_commit.message, '[test all]') || contains(github.event.head_commit.message, '[test boostodeint]')"
+      run: |
+        cd tests/test_boostodeint
+        run_test_boostodeint_default_noparams.sh
+        run_test_boostodeint_default_params.sh
+        run_test_boostodeint_implicit_noparams.sh
+        run_test_boostodeint_implicit_params.sh
+        cd ../..
