--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,7 +3,7 @@ name: Test commands
 on: [push, pull_request]
 
 jobs:
-  build:
+  test_vfgen:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
