--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,6 +50,14 @@ jobs:
     - name: test_help
       run: |
         vfgen help help
+    - name: test_lsoda
+      if: "contains(github.event.head_commit.message, '[test all]') || contains(github.event.head_commit.message, '[test lsoda]')"
+      run: |
+        cd tests/test_lsoda
+        bash download_lsoda.sh
+        bash run_test_linearosc.sh
+        bash run_test_pidecay.sh
+        cd ../..
     - name: test_scilab
       if: "contains(github.event.head_commit.message, '[test all]') || contains(github.event.head_commit.message, '[test scilab]')"
       run: |
