--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -82,3 +82,9 @@ jobs:
         cd tests/test_scilab
         sudo bash test_scilab.sh
         cd ..
+    - name: test_scipy
+      if: "contains(github.event.head_commit.message, '[test all]') || contains(github.event.head_commit.message, '[test scipy]')"
+      run: |
+        cd tests/test_scipy
+        sudo bash test_scipy.sh
+        cd ..
