--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - uses: r-lib/actions/setup-r@v2
     - name: install
       run: |
         sudo apt-get -y update && sudo apt-get -y install lsb-release
@@ -77,6 +76,7 @@ jobs:
         cd ../..
     - name: test_r
       if: "contains(github.event.head_commit.message, '[test all]') || contains(github.event.head_commit.message, '[test r]')"
+      uses: r-lib/actions/setup-r@v2
       run: |
         cd tests/test_r
         bash run_test.sh
