--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -74,6 +74,12 @@ jobs:
         cd tests/test_pygsl
         sudo bash run_test.sh
         cd ../..
+    - name: test_radau5
+      if: "contains(github.event.head_commit.message, '[test all]') || contains(github.event.head_commit.message, '[test radau5]')"
+      run: |
+        cd tests/test_radau5
+        bash run_test.sh
+        cd ../..
     - name: test_scilab
       if: "contains(github.event.head_commit.message, '[test all]') || contains(github.event.head_commit.message, '[test scilab]')"
       run: |
