--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -115,8 +115,20 @@ jobs:
     - uses: actions/checkout@v4
     - name: install
       run: |
-        echo "Installing ginac and libmxml"
-        brew install ginac libmxml@3.3.1
+        echo "Installing ginac with brew"
+        brew install ginac
+        #
+        echo "Installing mini-xml 3.3.1 from tarball"
+        mkdir install-mxml
+        cd install-mxml
+        curl -L -s -S -O https://github.com/michaelrsweet/mxml/releases/download/v3.3.1/mxml-3.3.1.tar.gz
+        tar xf mxml-3.3.1.tar.gz
+        cd mxml-3.3.1
+        ./configure
+        make
+        make install
+        cd ..
+        #
         echo "Installing vfgen"
         cd cmake_build
         cmake ../src
