--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,10 +22,10 @@ jobs:
       if: "contains(github.event.head_commit.message, '[test all]') || contains(github.event.head_commit.message, '[test boostodeint]')"
       run: |
         cd tests/test_boostodeint
-        run_test_boostodeint_default_noparams.sh
-        run_test_boostodeint_default_params.sh
-        run_test_boostodeint_implicit_noparams.sh
-        run_test_boostodeint_implicit_params.sh
+        bash run_test_boostodeint_default_noparams.sh
+        bash run_test_boostodeint_default_params.sh
+        bash run_test_boostodeint_implicit_noparams.sh
+        bash run_test_boostodeint_implicit_params.sh
         cd ../..
     - name: test_cvode7
       if: "contains(github.event.head_commit.message, '[test all]') || contains(github.event.head_commit.message, '[test cvode7]')"
