--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,7 +51,8 @@ jobs:
       if: "contains(github.event.head_commit.message, '[test all]') || contains(github.event.head_commit.message, '[test gsl]')"
       run: |
         cd tests/test_gsl
-        sudo bash run_test.sh
+        sudo bash install_gsl.sh
+        bash run_test.sh
         cd ../..
     - name: test_help
       run: |
