--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -99,7 +99,8 @@ jobs:
       if: "contains(github.event.head_commit.message, '[test all]') || contains(github.event.head_commit.message, '[test scipy]')"
       run: |
         cd tests/test_scipy
-        sudo bash run_test.sh
+        sudo bash install_scipy.sh
+        bash run_test.sh
         cd ..
     - name: setup_r
       if: "contains(github.event.head_commit.message, '[test all]') || contains(github.event.head_commit.message, '[test r]')"
