--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -80,6 +80,13 @@ jobs:
         bash run_test_linearosc.sh
         bash run_test_pidecay.sh
         cd ../..
+    - name: test_matlab
+      if: "contains(github.event.head_commit.message, '[test all]') || contains(github.event.head_commit.message, '[test matlab]')"
+      run: |
+        cd tests/test_matlab
+        sudo bash install_octave.sh
+        bash run_test.sh
+        cd ../..
     - name: test_octave
       if: "contains(github.event.head_commit.message, '[test all]') || contains(github.event.head_commit.message, '[test octave]')"
       run: |
