Remove the pddecont command.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -59,7 +59,7 @@ endif(CMAKE_COMPILER_IS_GNUCXX)
 #
 # For convenience, define the list of C++ files in a macro.
 #
-set(VFGEN_CPP_SRC_FILES codegen_utils.cpp ginac_aux_functions.cpp strutils.cpp MyVec.cpp vf_adolc.cpp vf_auto.cpp vf_boostodeint.cpp vf.cpp vf_cvode.cpp vf_cvode7.cpp vf_dde23.cpp vf_ddebiftool.cpp vf_dde_solver.cpp vf_delay2ode.cpp vf_differentials.cpp vf_dstool.cpp vf_evf.cpp vfgen.cpp vf_gsl.cpp vf_javamath.cpp vf_javascript.cpp vf_julia.cpp vf_latex.cpp vf_lsoda.cpp vf_matcont.cpp vf_matlab.cpp vf_octave.cpp vf_pddecont.cpp vf_pydstool.cpp vf_pygsl.cpp vf_r.cpp vf_radau5.cpp vf_scilab.cpp vf_scipy.cpp vf_taylor.cpp vf_xml.cpp vf_xpp.cpp)
+set(VFGEN_CPP_SRC_FILES codegen_utils.cpp ginac_aux_functions.cpp strutils.cpp MyVec.cpp vf_adolc.cpp vf_auto.cpp vf_boostodeint.cpp vf.cpp vf_cvode.cpp vf_cvode7.cpp vf_dde23.cpp vf_ddebiftool.cpp vf_dde_solver.cpp vf_delay2ode.cpp vf_differentials.cpp vf_dstool.cpp vf_evf.cpp vfgen.cpp vf_gsl.cpp vf_javamath.cpp vf_javascript.cpp vf_julia.cpp vf_latex.cpp vf_lsoda.cpp vf_matcont.cpp vf_matlab.cpp vf_octave.cpp vf_pydstool.cpp vf_pygsl.cpp vf_r.cpp vf_radau5.cpp vf_scilab.cpp vf_scipy.cpp vf_taylor.cpp vf_xml.cpp vf_xpp.cpp)
 
 add_executable(vfgen ${VFGEN_CPP_SRC_FILES})
 
