MAINT: Remove pydstool.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,7 +5,7 @@ vfgen_SOURCES = vfgen.cpp vf.cpp vf_adolc.cpp vf_auto.cpp vf_boostodeint.cpp \
                 vf_evf.cpp vf_gsl.cpp                                        \
                 vf_javamath.cpp vf_javascript.cpp vf_julia.cpp               \
                 vf_latex.cpp vf_lsoda.cpp  vf_matcont.cpp vf_matlab.cpp      \
-                vf_octave.cpp vf_pydstool.cpp vf_pygsl.cpp                   \
+                vf_octave.cpp vf_pygsl.cpp                                   \
                 vf_r.cpp vf_radau5.cpp vf_scilab.cpp vf_scipy.cpp            \
                 vf_taylor.cpp vf_xml.cpp vf_xpp.cpp ginac_aux_functions.cpp  \
                 strutils.cpp codegen_utils.cpp MyVec.cpp vf.h vf_help_text.h \
