--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -103,7 +103,7 @@ jobs:
       if: "contains(github.event.head_commit.message, '[test all]') || contains(github.event.head_commit.message, '[test radau5]')"
       run: |
         cd tests/test_radau5
-        sudo apt-get -y install liblapack64-3
+        sudo apt-get -y install liblapack3
         bash run_test.sh
         cd ../..
     - name: test_scilab
